# geocomp-proj

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  Makefile  README.md  cgal_render.cpp  cgal_render.h  cmake_install.cmake  edgeError.cpp  edgeError.h  input.cpp  input.h  main  main.cpp  matrix4x4f.cpp  matrix4x4f.h
CGAL-4.3/: CGALConfig.cmake  CMakeCache.txt  Makefile  cmake_install.cmake
CGAL-4.3/config/: CGALConfig.cmake
CGAL-4.3/examples/Polyhedron/: CMakeCache.txt  Makefile  cmake_install.cmake  polyhedron_prog_color  polyhedron_prog_cube  polyhedron_prog_cut_cube  polyhedron_prog_incr_builder  polyhedron_prog_normals  polyhedron_prog_off  polyhedron_prog_planes  polyhedron_prog_simple  polyhedron_prog_subdiv  polyhedron_prog_subdiv_with_boundary  polyhedron_prog_tetra  polyhedron_prog_traits  polyhedron_prog_vector  polyhedron_prog_vertex_color  polyhedron_prog_vertex_normal  polyhedron_self_intersection
CGAL-4.3/include/CGAL/: compiler_config.h
CGAL-4.3/lib/: libCGAL.so.10.0.2  libCGAL_Core.so.10  libCGAL_Core.so.10.0.2  libCGAL_ImageIO.so.10  libCGAL_ImageIO.so.10.0.2  libCGAL_Qt4.so.10  libCGAL_Qt4.so.10.0.2
CGAL-4.3/src/: Makefile  cmake_install.cmake
CGAL-4.3/src/CGAL/: Makefile  all_files.cpp  cmake_install.cmake
CGAL-4.3/src/CGAL_Core/: Makefile  all_files.cpp  cmake_install.cmake
CGAL-4.3/src/CGAL_ImageIO/: Makefile  all_files.cpp  cmake_install.cmake
CGAL-4.3/src/CGAL_Qt3/: Makefile  cmake_install.cmake
CGAL-4.3/src/CGAL_Qt4/: Makefile  all_files.cpp  cmake_install.cmake  qrc_CGAL.cxx  qrc_File.cxx  qrc_Input.cxx  (+1 more)
(+4 files in other folders)
